--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@emailjs/browser": "^3.10.0",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sweetalert2": "^11.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
