--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.2",
     "sweetalert2": "^11.7.1"
   },
   "devDependencies": {
